<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@id/login_tv_language"
            android:text="@string/login_setting_language"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="@dimen/sp_16"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:visibility="invisible"
                    />

                <ImageView
                    android:layout_marginTop="50dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="应用图标"
                    android:scaleType="centerInside"
                    android:background="@mipmap/ic_launcher"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:visibility="invisible"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/hintAppearance"
                    >

                    <EditText
                        android:id="@id/login_et_username"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginStart="6dp"
                        android:background="@null"
                        android:hint="@string/login_et_username"
                        android:inputType="textEmailAddress|text"
                        android:textSize="16sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/login_et_username"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/horizontal_line"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/hintAppearance"
                    >

                    <EditText
                        android:id="@id/login_et_id_card"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginStart="6dp"
                        android:background="@null"
                        android:hint="@string/login_id_card"
                        android:inputType="textPassword"
                        android:textSize="16sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/login_et_id_card"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/horizontal_line"
                        />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:visibility="invisible"
                    />


                <RelativeLayout
                    android:id="@id/login_rl_take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_rl_take_photo"
                    >
                    <ImageView
                        android:id="@id/login_iv_picture"
                        android:layout_centerInParent="true"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:text="@string/login_tv_take_photo"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/color_primary"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/login_iv_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <Button
                    android:id="@id/login_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/login_btn_login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>

